[package]
name = "stellar-contract-cli"
version = "0.0.0"
edition = "2021"

[dependencies]
stellar-contract-env-host = { git = "https://github.com/sisuresh/rs-stellar-contract-env", rev = "da37a35", features = ["vm"] }
# stellar-contract-env-host = { path = "../rs-stellar-contract-env/stellar-contract-env-host", features = ["vm"] }
clap = { version = "3.1.18", features = ["derive", "env"] }
base64 = "0.13.0"
thiserror = "1.0.31"
serde_json = "1.0.82"
